--- a/public/sass/variables.scss
+++ b/public/sass/variables.scss
@@ -3,6 +3,8 @@ $computer:                     1170px;
 $tablet:                       768px;
 $phone:                        0px;
 
+$prefixes:                     webkit moz;
+
 // colors
 $white:                        #fffefe;
 $black:                        #222;
